# Editor

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: main.yml
include/: Circle.h  ControllerEditor.h  DocumentEditor.h  DocumentModel.h  EditorController.h  EditorModel.h  GraphicColor.h  GraphicPrimitive.h  GraphicRender.h  GraphicRenderType.h  IDocumentEditor.h  IDocumentModel.h  IEditor.h  IEditorModel.h  IGraphicPrimitive.h  IModelEditor.h  IViewEditor.h  Line.h  ModelEditor.h  Rectangle.h  ViewEditor.h
src/: Circle.cpp  DocumentEditor.cpp  DocumentModel.cpp  EditorController.cpp  EditorModel.cpp  GraphicPrimitive.cpp  Line.cpp  Rectangle.cpp  ViewEditor.cpp  main.cpp
src/View/: ViewEditor.cpp
